--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
+pytest = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
