--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ numpy = "^1.22.3"
 torchvision = "^0.12.0"
 tqdm = "^4.63.1"
 matplotlib = "^3.5.1"
+pytorch-lightning = "^1.6.0"
+dill = "^0.3.4"
+google-cloud-storage = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
