--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,8 @@ pytest = "^7.1.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::DeprecationWarning"
+]
